--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@mantine/next": "^6.0.17",
     "@mui/material": "^5.14.1",
     "@tabler/icons-react": "^2.28.0",
+    "@tanstack/react-query": "^4.32.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
