--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "^6.0.17",
     "@mantine/hooks": "^6.0.17",
     "@mantine/next": "^6.0.17",
+    "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
     "@tabler/icons-react": "^2.28.0",
     "@tanstack/react-query": "^4.32.0",
