--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.0",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.15.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1",
