--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/Component/DonughnutChart.jsx", "src/Component/test.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/Component/DonughnutChart.jsx",
+    "src/Component/test.jsx"
+  ],
   "exclude": ["node_modules"]
 }
