--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1",
+    "zod": "^3.22.2",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
