--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^6.15.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "typescript-cookie": "^1.0.6",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.2",
     "zustand": "^4.4.0"
