--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@mantine/next": "^6.0.17",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tabler/icons-react": "^2.28.0",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.35.0",
@@ -26,10 +30,12 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "class-variance-authority": "^0.7.0",
     "dayjs": "^1.11.9",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.279.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
@@ -38,6 +44,7 @@
     "react-hook-form": "^7.46.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1",
