--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.0",
+    "react-hook-form": "^7.46.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "tailwindcss": "3.3.3",
